# docs

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  book.toml
.github/workflows/: docs.yml
src/: SUMMARY.md  constellation.md  intro.md  philosophy.md  platform.md  quickstart.md
tools/: harvest-catalog.sh  harvest-reference.sh
